--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+ }
+  
+ html, body, #root {
+  height: 100%;
+ }
+  
+ body {
+  font: 400 14px Roboto, sans-serif;
+  background: #F0f0f5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+ }
+  
+ input, button, textarea {
+  font: 400 18px Roboto, sans-serif;
+ }
+  
+ button {
+  cursor: pointer;
+ }
+  
+ .container {
+  max-width: 1020px;
+  margin: 64px auto;
+  padding: 0 20px;
+ }
